# weightr-frontend

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
docs/design/: auth.md
docs/design/mermaid/: auth-component.mmd  auth-flowchart.mmd  auth-sequence.mmd
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  hostpath-pv.yaml  hostpath-pvc.yaml  ingress.yaml  service.yaml
helm/values/: values-prod.yaml
scripts/: configure.sh  k3d.sh  run-docker.sh  run.sh
src/: Home.py  app.py  conf.py  util.py
src/pages/: 1_📈_Overview.py  2_📉_Weight_Loss.py  3_📊_Distributions.py
var/conf/weightr-frontend/: .env.dev.docker.template  .env.dev.template
