[project]
name = "weightr-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "pandas==2.2.3",
    "plotly==5.18.0",
    "pydantic-settings==2.8.1",
    "requests==2.32.3",
    "scipy==1.15.3",
    "setuptools==78.1.0",
    "streamlit==1.44.1",
]
